SUBDIRS =

if HAVE_FILTER_CLAMAV
SUBDIRS +=	filter-clamav
endif

if HAVE_FILTER_DNSBL
SUBDIRS	+=	filter-dnsbl
endif

if HAVE_FILTER_MONKEY
SUBDIRS	+=	filter-monkey
endif

if HAVE_FILTER_PERL
SUBDIRS	+=	filter-perl
endif

if HAVE_FILTER_PYTHON
SUBDIRS	+=	filter-python
endif

if HAVE_FILTER_STUB
SUBDIRS	+=	filter-stub
endif

if HAVE_FILTER_TRACE
SUBDIRS	+=	filter-trace
endif

if HAVE_FILTER_VOID
SUBDIRS	+=	filter-void
endif
