SUBDIRS=

if HAVE_TABLE_LDAP
SUBDIRS+=	table-ldap
endif

if HAVE_TABLE_POSTGRES
SUBDIRS+=	table-postgres
endif

if HAVE_TABLE_PYTHON
SUBDIRS+=	table-python
endif

if HAVE_TABLE_MYSQL
SUBDIRS+=	table-mysql
endif

if HAVE_TABLE_SQLITE
SUBDIRS+=	table-sqlite
endif

if HAVE_TABLE_REDIS
SUBDIRS+=	table-redis
endif

if HAVE_TABLE_SOCKETMAP
SUBDIRS+=	table-socketmap
endif

if HAVE_TABLE_PASSWD
SUBDIRS+=	table-passwd
endif

if HAVE_TABLE_STUB
SUBDIRS+=	table-stub
endif

