include	$(top_srcdir)/mk/wip.mk
include	$(top_srcdir)/mk/table.mk

pkglibexec_PROGRAMS	 = table-ldap

table_ldap_SOURCES	 = $(SRCS)
table_ldap_SOURCES	+= $(tables_srcdir)/table-ldap/table_ldap.c
table_ldap_SOURCES	+= $(tables_srcdir)/table-ldap/aldap.c
table_ldap_SOURCES	+= $(tables_srcdir)/table-ldap/ber.c
